--- a/app/src/main/res/layout/fragment_chicken_store.xml
+++ b/app/src/main/res/layout/fragment_chicken_store.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     android:gravity="center">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="치킨가게 프레그먼트"
-        android:textSize="20dp"/>
+    <ListView
+        android:id="@+id/myChickenListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
